--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -1,22 +1,81 @@
-html,
-body {
+@import url("https://fonts.googleapis.com/css2?family=Rubik&display=swap");
+body,
+p,
+a,
+ul,
+li {
   margin: 0;
-  background-color: #0a0b5b;
-}
-
-a {
+  padding: 0;
   text-decoration: none;
 }
 
+li {
+  list-style-type: none;
+}
+
 body {
-  color: #cdddfd;
+  background-color: #0a0b5b;
+  overflow-x: hidden;
+  font-family: "Rubik", sans-serif;
 }
 
 .button {
-  color: #efc462;
-  border: 2px solid #efc462;
-  padding: 0.5em 1em;
+  background: none;
+  border: 2px solid #ffc636;
+  color: #ffc636;
+  padding: 6px 12px;
   border-radius: 20px;
+  text-transform: uppercase;
+  box-shadow: 1px 2px 3px rgba(0, 0, 0, 0.6);
+  display: inline-block;
+}
+
+.button:hover {
+  color: #222;
+  background: #ffc636;
+}
+
+input,
+textarea {
+  background-color: rgba(255, 255, 255, 0.05);
+  color: #f2f2f2;
+  padding: 10px 16px;
+  border-radius: 20px;
+  border: 2px solid #9893d8;
+}
+
+h1,
+h2,
+h3,
+h4 {
+  color: #dddbff;
+  font-weight: normal;
+}
+
+p,
+a,
+li {
+  color: #9893d8;
+}
+
+h1,
+h3 {
+  font-size: 1.2em;
+}
+
+h2 {
+  /* h2 is the Big heading */
+  font-size: 1.6em;
+}
+
+h4 {
+  /* h4 is description text */
+  font-size: 1.1em;
+}
+
+.leading {
+  /* These are leading paragraphs */
+  font-size: 1.1em;
 }
 
 .site-nav ul {
@@ -32,6 +91,17 @@ body {
   background-image: url(../images/square_bg.png);
   background-position: center;
   background-size: cover;
+}
+
+@media screen and (min-width: 960px) {
+  body {
+    font-size: 18px;
+  }
+}
+@media screen and (min-width: 1200px) {
+  body {
+    font-size: 20px;
+  }
 }
 
 /*# sourceMappingURL=styles.css.map */
