--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -5,6 +5,9 @@
 /* VARIABLES: 															*/
 /* ---------------------------------------- */
 /* ------------------ */
+/* MIXINS: 															*/
+/* ---------------------------------------- */
+/* ------------------ */
 /* RESET: 																	*/
 /* ---------------------------------------- */
 /* This Next Rule and the one after is called the
@@ -110,6 +113,7 @@ h4 {
 .grid {
   display: grid;
   grid-template-columns: repeat(8, 1fr);
+  gap: 10px;
 }
 
 .site-nav {
@@ -166,6 +170,28 @@ h4 {
 }
 #portfolio .projects h4 {
   color: #9994f7;
+}
+
+#skills {
+  padding: 30px 20px;
+  background: #07083e;
+}
+#skills h3 {
+  margin-bottom: 0;
+  text-align: center;
+}
+#skills ul {
+  margin: 40px 0;
+}
+#skills li {
+  padding: 10px;
+  text-align: center;
+  background: rgba(0, 0, 0, 0.2);
+  grid-column: span 4;
+}
+#skills img {
+  height: 80px;
+  margin: 10px auto;
 }
 
 /* ------------------ */
