--- a/assets/scss/styles.scss
+++ b/assets/scss/styles.scss
@@ -16,11 +16,9 @@ $primary: #ffc636;
 	padding: 30px 20px;
 }
 
-@mixin h3 {
-	h3 {
-		margin-bottom: 0;
-		text-align: center;
-	}
+@mixin centerTxt {
+	margin-bottom: 0;
+	text-align: center;
 }
 /* ------------------ */
 
@@ -133,6 +131,16 @@ h4 {
 	gap: 10px;
 }
 
+#portfolio,
+#skills,
+#contact {
+	@include section-padding;
+
+	h3 {
+		@include centerTxt();
+	}
+}
+
 // Navigation Section
 .site-nav {
 	margin: 0 20px;
@@ -172,8 +180,6 @@ h4 {
 
 // Portfolio Section
 #portfolio {
-	@include section-padding;
-	@include h3;
 	background-image: url(../images/square_bg.png);
 	background-size: cover;
 	background-position: bottom;
@@ -199,9 +205,8 @@ h4 {
 	}
 }
 
+// Skills Section
 #skills {
-	@include section-padding;
-	@include h3;
 	background: #07083e;
 
 	ul {
@@ -218,6 +223,74 @@ h4 {
 	img {
 		height: 80px;
 		margin: 10px auto;
+	}
+}
+
+// Contact Section
+#contact {
+	background: #080936;
+
+	p {
+		@include centerTxt;
+	}
+
+	form {
+		width: 80%;
+		max-width: 400px;
+		margin: 20px auto;
+		text-align: center;
+
+		input,
+		textarea {
+			width: 100%;
+			margin: 10px 0;
+		}
+
+		.button {
+			margin-top: 10px;
+		}
+	}
+}
+
+footer {
+	@include section-padding;
+	background-color: #14153d;
+	background-image: url(../images/footer_image.png);
+	background-size: 40%;
+	background-position: top;
+	background-repeat: no-repeat;
+
+	.grid {
+		align-items: center;
+	}
+
+	.copyright {
+		grid-column: 1/3;
+		font-size: 0.8em;
+	}
+
+	.social {
+		grid-column: 7/9;
+		display: flex;
+		justify-content: flex-end;
+		align-items: center;
+
+		li {
+			align-self: center;
+		}
+
+		img {
+			// width: 20px;
+			height: 100%;
+		}
+	}
+
+	li:nth-child(1) {
+		margin: 0 6px;
+	}
+
+	li:nth-child(2) {
+		margin: 0 0 0 6px;
 	}
 }
 /* ------------------ */
