--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -143,7 +143,7 @@ h4 {
 }
 
 #welcome {
-  padding: 0 20px 20px 20px;
+  padding: 0 0 20px 20px;
 }
 #welcome .welcome-text {
   grid-column: 1/6;
@@ -152,6 +152,7 @@ h4 {
   margin: 20px 0;
 }
 #welcome .welcome-img {
+  overflow-x: hidden;
   grid-column: 6/9;
 }
 #welcome .welcome-img img {
