--- a/assets/scss/styles.scss
+++ b/assets/scss/styles.scss
@@ -159,7 +159,7 @@ h4 {
 
 // Welcome Section
 #welcome {
-	padding: 0 20px 20px 20px;
+	padding: 0 0 20px 20px;
 
 	.welcome-text {
 		grid-column: 1/6;
@@ -170,6 +170,7 @@ h4 {
 	}
 
 	.welcome-img {
+		overflow-x: hidden;
 		grid-column: 6/9;
 
 		img {
