FIXING mobile horizontal view

--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -45,6 +45,10 @@ body {
   font-family: "Rubik", sans-serif;
 }
 
+body > * {
+  width: 100%;
+}
+
 .button {
   background: none;
   border: 2px solid #ffc636;
