--- a/assets/scss/styles.scss
+++ b/assets/scss/styles.scss
@@ -59,6 +59,10 @@ body {
 	font-family: 'Rubik', sans-serif;
 }
 
+body > * {
+	width: 100%;
+}
+
 .button {
 	background: none;
 	border: 2px solid $primary;
