--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -248,7 +248,7 @@ footer .social li {
   align-self: center;
 }
 footer .social img {
-  height: 100%;
+  width: 23px;
 }
 footer li:nth-child(1) {
   margin: 0 6px;
@@ -260,6 +260,46 @@ footer li:nth-child(2) {
 /* ------------------ */
 /* MEDIA QUERIES:
 /* ---------------------------------------- */
+@media screen and (min-width: 620px) {
+  #welcome .welcome-text {
+    grid-column: 1/5;
+  }
+  #welcome .welcome-img {
+    grid-column: 5/9;
+  }
+  #welcome .welcome-img img {
+    width: 100%;
+  }
+
+  #portfolio .projects {
+    margin-top: 40px;
+  }
+  #portfolio .projects a {
+    grid-column: span 4;
+    display: block;
+  }
+  #portfolio .projects a:last-child {
+    grid-column: 3/7;
+  }
+  #portfolio .projects a * {
+    max-width: 60%;
+    margin: 30px 20%;
+  }
+
+  #skills {
+    padding: 30px 100px;
+  }
+  #skills li {
+    padding: 30px 0;
+  }
+
+  footer {
+    background-size: 20%;
+  }
+  footer .social img {
+    width: 25px;
+  }
+}
 @media screen and (min-width: 960px) {
   body {
     font-size: 18px;
