--- a/assets/scss/styles.scss
+++ b/assets/scss/styles.scss
@@ -285,8 +285,7 @@ footer {
 		}
 
 		img {
-			// width: 20px;
-			height: 100%;
+			width: 23px;
 		}
 	}
 
@@ -304,6 +303,56 @@ footer {
 /* ---------------------------------------- */
 // small tablet styles
 @media screen and (min-width: 620px) {
+	#welcome {
+		.welcome-text {
+			grid-column: 1/5;
+		}
+
+		.welcome-img {
+			grid-column: 5/9;
+			img {
+				width: 100%;
+			}
+		}
+	}
+
+	#portfolio {
+		.projects {
+			margin-top: 40px;
+
+			a {
+				grid-column: span 4;
+				display: block;
+
+				&:last-child {
+					grid-column: 3/7;
+				}
+
+				* {
+					max-width: 60%;
+					margin: 30px 20%;
+				}
+			}
+		}
+	}
+
+	#skills {
+		padding: 30px 100px;
+
+		li {
+			padding: 30px 0;
+		}
+	}
+
+	footer {
+		background-size: 20%;
+
+		.social {
+			img {
+				width: 25px;
+			}
+		}
+	}
 }
 
 // large tablets & laptop styles
