--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -133,7 +133,7 @@ h4 {
 }
 
 .site-nav {
-  margin: 20px;
+  padding: 20px;
 }
 .site-nav ul {
   display: none;
@@ -188,7 +188,7 @@ h4 {
   background: #07083e;
 }
 #skills ul {
-  margin: 40px 0;
+  margin: 40px auto;
 }
 #skills li {
   padding: 10px;
@@ -303,6 +303,57 @@ footer li:nth-child(2) {
 @media screen and (min-width: 960px) {
   body {
     font-size: 18px;
+  }
+
+  .grid {
+    width: 100%;
+    max-width: 1060px;
+    margin: 0 auto;
+  }
+
+  .site-nav h1 {
+    grid-column: 1/3;
+  }
+  .site-nav ul {
+    grid-column: 6/9;
+    display: flex;
+    justify-content: flex-end;
+    align-items: center;
+  }
+  .site-nav ul > * {
+    margin-left: 20px;
+  }
+
+  #welcome {
+    align-items: center;
+    padding-bottom: 40px;
+  }
+  #welcome .welcome-text .leading {
+    margin: 20px 0;
+  }
+
+  #portfolio .projects a:nth-child(1) {
+    grid-column: 2/4;
+  }
+  #portfolio .projects a:nth-child(2) {
+    grid-column: 4/6;
+    padding-top: 140px;
+  }
+  #portfolio .projects a:nth-child(3) {
+    grid-column: 6/8;
+  }
+  #portfolio .projects a * {
+    max-width: 80%;
+    margin: 30px 10%;
+  }
+
+  #skills li {
+    grid-column: span 2;
+  }
+
+  footer {
+    padding: 40px 20px;
+    background-size: 23%;
   }
 }
 @media screen and (min-width: 1200px) {
