--- a/assets/scss/styles.scss
+++ b/assets/scss/styles.scss
@@ -147,7 +147,7 @@ h4 {
 
 // Navigation Section
 .site-nav {
-	margin: 20px;
+	padding: 20px;
 
 	ul {
 		display: none;
@@ -197,7 +197,7 @@ h4 {
 			margin: 20px 0;
 			display: flex;
 
-			& * {
+			* {
 				max-width: 40%;
 				margin: 0 20px;
 				align-self: center;
@@ -215,7 +215,7 @@ h4 {
 	background: #07083e;
 
 	ul {
-		margin: 40px 0;
+		margin: 40px auto;
 	}
 
 	li {
@@ -359,6 +359,73 @@ footer {
 @media screen and (min-width: 960px) {
 	body {
 		font-size: 18px;
+	}
+
+	.grid {
+		width: 100%;
+		max-width: 1060px;
+		margin: 0 auto;
+	}
+
+	.site-nav {
+		h1 {
+			grid-column: 1/3;
+		}
+
+		ul {
+			grid-column: 6/9;
+			display: flex;
+			justify-content: flex-end;
+			align-items: center;
+
+			> * {
+				margin-left: 20px;
+			}
+		}
+	}
+
+	#welcome {
+		align-items: center;
+		padding-bottom: 40px;
+
+		.welcome-text {
+			.leading {
+				margin: 20px 0;
+			}
+		}
+	}
+
+	#portfolio {
+		.projects {
+			a {
+				&:nth-child(1) {
+					grid-column: 2/4;
+				}
+				&:nth-child(2) {
+					grid-column: 4/6;
+					padding-top: 140px;
+				}
+				&:nth-child(3) {
+					grid-column: 6/8;
+				}
+
+				* {
+					max-width: 80%;
+					margin: 30px 10%;
+				}
+			}
+		}
+	}
+
+	#skills {
+		li {
+			grid-column: span 2;
+		}
+	}
+
+	footer {
+		padding: 40px 20px;
+		background-size: 23%;
 	}
 }
 
