--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -147,7 +147,7 @@ h4 {
 }
 
 #welcome {
-  padding: 0 0 20px 20px;
+  padding: 0 20px;
 }
 #welcome .welcome-text {
   grid-column: 1/6;
@@ -359,6 +359,36 @@ footer li:nth-child(2) {
 @media screen and (min-width: 1200px) {
   body {
     font-size: 20px;
+  }
+
+  .site-nav {
+    padding: 20px 0;
+  }
+
+  #welcome,
+#portfolio,
+#skills,
+#contact {
+    padding: 90px 0;
+  }
+
+  #portfolio .projects a:nth-child(1) {
+    grid-column: 1/3;
+  }
+  #portfolio .projects a:nth-child(3) {
+    grid-column: 7/9;
+  }
+  #portfolio .projects a * {
+    max-width: 100%;
+    margin: 30px 0;
+  }
+
+  footer {
+    padding: 80px 0;
+    background-size: 30%;
+  }
+  footer .social img {
+    width: 30px;
   }
 }
 
