--- a/assets/scss/styles.scss
+++ b/assets/scss/styles.scss
@@ -163,7 +163,7 @@ h4 {
 
 // Welcome Section
 #welcome {
-	padding: 0 0 20px 20px;
+	padding: 0 20px;
 
 	.welcome-text {
 		grid-column: 1/6;
@@ -433,5 +433,46 @@ footer {
 @media screen and (min-width: 1200px) {
 	body {
 		font-size: 20px;
+	}
+
+	.site-nav {
+		padding: 20px 0;
+	}
+
+	#welcome,
+	#portfolio,
+	#skills,
+	#contact {
+		padding: 90px 0;
+	}
+
+	#portfolio {
+		.projects {
+			a {
+				&:nth-child(1) {
+					grid-column: 1/3;
+				}
+
+				&:nth-child(3) {
+					grid-column: 7/9;
+				}
+
+				* {
+					max-width: 100%;
+					margin: 30px 0;
+				}
+			}
+		}
+	}
+
+	footer {
+		padding: 80px 0;
+		background-size: 30%;
+
+		.social {
+			img {
+				width: 30px;
+			}
+		}
 	}
 }
